--- a/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
+++ b/intermediate-html-css/positioning-grid/01-basic-holy-grail/style.css
@@ -9,6 +9,10 @@ html {
   height: 100%;
   padding: 16px;
   box-sizing: border-box;
+  display: grid;
+  grid-template-columns: 400px 1200px;
+  grid-template-rows: 50px 50px 250px, 50px;
+  gap: 15px;
 }
 
 .container div {
@@ -21,22 +25,28 @@ html {
 }
 
 .header {
+  /* row-start / column-start / row-end / column-end */
+  grid-area: 1 / 1 / 2 / 3;
   background-color: #006157;
 }
 
 .sidebar {
-  background-color: #005B94;
+  grid-area: 2 / 1 / 4 / 2;
+  background-color: #005b94;
 }
 
 .nav {
+  grid-area: 2 / 2 / 3 / 3;
   background-color: #642cde;
 }
 
 .article {
-  background-color: #7E1DC3;
+  grid-area: 3 / 2 / 4 / 3;
+  background-color: #7e1dc3;
 }
 
 .footer {
+  grid-area: 4 / 1 / 5 / 3;
   background-color: #393f4d;
 }
 
